Change font and add padding to stars

--- a/client/src/Styles/Reviews.css
+++ b/client/src/Styles/Reviews.css
@@ -1,6 +1,6 @@
 .common {
   color:"#484848";
-  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif;
+  font-family: 'Nunito', sans-serif;
 }
 
 .name {
