--- a/client/src/Styles/Search.css
+++ b/client/src/Styles/Search.css
@@ -1,6 +1,6 @@
 .search form {
-  font-size: "14px";
+  font-size: 14px;
   color: #484848;
-  height: "18px";
+  height: 18px;
   vertical-align: middle;
 }
