--- a/client/src/Styles/StarCategory.css
+++ b/client/src/Styles/StarCategory.css
@@ -16,6 +16,7 @@ i {
 
 .table {
   composes: common;
+  margin: 0 5% 0 5%;
   display: flex;
   flex-direction: column;
 }
@@ -32,8 +33,13 @@ i {
   flex-basis: 50%;
 }
 
+.starsum {
+  composes: fa;
+  font-size: 18px;
+}
+
 .summary {
   composes: common;
-  font-size: "20px";
-  line-height: "26px";
+  font-size: 24px;
+  font-weight: 800;
 }
