--- a/client/src/Styles/Reviews.css
+++ b/client/src/Styles/Reviews.css
@@ -30,3 +30,13 @@ img {
   border-radius: 50%;
   
 }
+
+button {
+  font-family: 'Nunito', sans-serif;
+  color: #008489;
+  padding: 4px;
+  border: none;
+  font-size: 16px;
+  line-height: 22px;
+  background: transparent;
+}
